Tried to fix text overflow

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body{
     }
     .card{
         width:100%!important;
-        height:100%!important;
         margin-top:100px;
     }
     .content-container{
@@ -26,8 +25,9 @@ body{
     }
     .image{
         width:100%!important;
-        height:27em!important;
+        height:480px!important;
         border-top-left-radius: 0.35em;
+        background-image:url("/images/image-header-mobile.jpg")!important;
     }
     .text{
         display: inline-block;
@@ -46,7 +46,7 @@ body{
 
 .card-container{
     justify-content: center;
-    height:59em;
+    height:57em;
     align-items: center;
     display:flex;
 }
@@ -58,7 +58,6 @@ body{
 .card{
     width:69.5em;
     border-radius:0.35em;
-    height:27.9em;
     background-color: hsl(244, 38%, 16%);
 }
 .text{
@@ -93,15 +92,17 @@ body{
     color:hsla(0, 0%, 100%, 0.575);
 }
 .image{
+    display: inline-block;
     grid-area: image;
     border-top-right-radius: 0.35em;
     z-index:1;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-bottom-right-radius: 0.35em;
-    background:url('images/image-header-desktop.jpg');
+    background-image    :url('images/image-header-desktop.jpg');
     opacity: 0.8;
     background-color:hsl(277, 69%, 61%);
     background-blend-mode: multiply;
-    height:446px;
     width:540px;
 }
 
